added the credit card field in the ordering form

--- a/style_sheets/product_description_style.css
+++ b/style_sheets/product_description_style.css
@@ -81,6 +81,11 @@
                     float: left;
             }
             
+            .credit_card_details{
+                text-align: center; 
+                border: 1px solid black;
+
+            }
             
             .submit_cell{
                 /*border: 1px solid black;*/
